--- a/components/style.css
+++ b/components/style.css
@@ -65,7 +65,7 @@ li {
     width: 30vw;
     border:1px solid rgb(222, 222, 222);
     border-radius: 20px 0 0 20px;
-    font-size: 10px;
+    font-size: 1rem;
     padding-left:10px;
 }
 .search-bar input:focus{
