--- a/pages/pages.css
+++ b/pages/pages.css
@@ -173,9 +173,14 @@ body {
 }
 
 .comment {
+    width: 80%;
     margin-bottom: 15px;
     padding: 10px;
     border-bottom: 1px solid #ccc;
+    display: flex;
+    text-align: right;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .comment-author {
@@ -236,7 +241,9 @@ body {
     *::-webkit-scrollbar{
         display: none;
     }
-
+    .comment {
+        width: 100%;
+    }
     .video-tile:hover {
         width: auto;
         transform: none;
@@ -384,3 +391,111 @@ body {
             transform: translateX(300px);
         }
     }
+
+    /* comment menu edit and delete option */
+    /* Subscribe button */
+    .profile-details{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    position: absolute;
+    background-color: #d11b2a;
+    color: white;
+    border-radius: 10px;
+    top: 10px;
+    right: 10px;
+    gap: 10px;
+    font-size: 1.2rem;
+    padding: 5px 10px;
+    box-sizing: border-box;
+   }
+   .video-description{
+    position: relative;
+   }
+   .ch-preview-image{
+    height: 30px;
+    width: 30px;
+    border-radius: 50%;
+   }
+
+   /* channel page styling */
+   .channel-container{
+    margin-top: 80px;
+    margin-left: 20px;
+    width: 96%;
+    height: auto;
+    padding: 20px;
+    box-sizing: border-box;
+    display: grid;
+    grid-template-columns: 30% 70%;
+    gap: 10px;
+    /* background-color:#171717; */
+   }
+   .profile-side{
+    background-color: transparent;
+    border: 4px solid rgba(192, 190, 190, 0.397);
+    background-color: rgba(192, 190, 190, 0.240);
+    border-radius: 20px;
+    color: #000000;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    gap: 10px;
+   }
+   .video-side{
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    gap: 8px;
+   }
+   .video{
+    background-color:rgba(195, 195, 195, 0.256);
+    border-radius: 10px;
+    max-height: min-content;
+    padding: 10px; 
+   }
+   .video img{
+    width: 100%;
+    border-radius: 10px;
+    aspect-ratio: 16/9;
+    object-fit: cover;
+   }
+   .ch-video-details{
+    margin-top: 20px;
+    line-height: auto;
+   }
+   .ch-video-details .ch-title{
+    font-size: 20px;
+    font-weight: 700;
+   }
+   .channelBanner{
+    height: 100px;
+    width: 100px;
+    border: 4px solid rgba(190, 190, 190, 0.397);
+    object-fit: cover;
+    border-radius: 50%;
+    margin-top: 20px;
+   }
+   .video a{
+    text-decoration: none;
+    color: #4b4b4b;
+   }
+   .video a:hover{
+    color:#1c1c1c;
+   }
+   @media (max-width: 1080px){
+    .channel-container{
+        width: 90vw;
+        height: auto;
+        padding: 10px;
+        box-sizing: border-box;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 10px;
+    }
+    .profile-side{
+        width: 100%;
+        padding: 10px;
+    }
+   }
