--- a/pages/pages.css
+++ b/pages/pages.css
@@ -182,6 +182,12 @@ body {
     justify-content: space-between;
     align-items: center;
 }
+.comment ul{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
 .username{
     font-size: 0.6rem;
 }
@@ -435,21 +441,31 @@ body {
     .comment{
         position: relative;
     }
-    .opt-menu{
+    /* .btns{
         display: none;
-        position: absolute;
+        position: relative;
         top:10px;
         right: 30px;
+    } */
+    .btns{
+        display: flex;
+        gap: 10px;
+        font-size: 0.8rem;
+    } 
+
+    .btns i{
+        color: black;
+        padding: 8px 10px;
+        border-radius: 5px;
+        transition: all 0.4s ease;
     }
-    .opt-menu button{
-        color: #fff5f5;
-        background-color: #cb2f3c;
-        width: max-content;
-        padding: 5px 10px;
-        margin: 10px;
-        border: none;
-        border-radius: 10px;
+    .btns i:hover{
+        background-color: #ff082531;
+        color:rgb(255, 0, 0);
+        padding: 8px 10px;
+        border-radius: 5px;
     }
+
 
     /* Subscribe button */
     .profile-details{
@@ -664,13 +680,13 @@ body {
    }
    .user-videos-box{
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
     gap: 10px;
     width: 100%;
    }
    .user-videos{
     width: 100%;
-    padding: 10px;
+    padding: 5px;
     background-color: white;
     border-radius: 10px;
     font-size: 1.2rem;
@@ -690,65 +706,3 @@ body {
     height: 100%;
     background-color: #1c1c1c;
    } */
-
-
-.container {
-    display: flex;
-    flex-direction: row;
-    height: 100vh;
-    max-width: 100vw;
-    margin-top: 80px;
-}
-.video-wrapper, .form-wrapper {
-    flex: 1;
-    padding: 20px;
-    box-sizing: border-box;
-}
-.video-wrapper video {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border-radius: 8px;
-}
-form {
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
-}
-label {
-    font-weight: 600;
-}
-input[type="text"],
-textarea,
-select {
-    padding: 10px;
-    font-size: 1rem;
-    border-radius: 4px;
-    border: 1px solid #ccc;
-    resize: vertical;
-}
-input[type="file"] {
-    padding: 5px 0;
-}
-button {
-    padding: 12px;
-    font-size: 1rem;
-    background-color: #f31919;
-    color: white;
-    border: none;
-    border-radius: 6px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-}
-button:hover {
-    background-color: #0056b3;
-}
-
-@media (max-width: 768px) {
-    .container {
-    flex-direction: column;
-    }
-    .video-wrapper {
-    height: 200px;
-    }
-}
